Began updating Online Help.  Set default quiz length to SHORT(2).

--- a/help/en/html/toMOTko.html
+++ b/help/en/html/toMOTko.html
@@ -28,7 +28,7 @@
         </ul>
         <p>
         If you have any inquiries/suggestions, or to report a bug, 
-        or submit and share your glossaries 
+        or submit and share your glossaries, 
         please go to the home page at 
         <a href="http://tomotko.sourceforge.net">http://tomotko.sourceforge.net</a>.
     </body>
