--- a/help/en/html/toMOTko-QuickStart.html
+++ b/help/en/html/toMOTko-QuickStart.html
@@ -7,10 +7,8 @@
     <body>
         <h1>Getting Started Quickly</h1>
         <p>
-        Here are an short and straight-forward guide to get
-        started quickly with toMOTko.  You can leave this window
-        open.  Just move it on the side to keep it in clear view to
-        follow the instructions.
+        Here is a short and straight-forward guide to get
+        started quickly with toMOTko.  
         </p><p>
         <ul>
             <li>Set the study languages</li>
@@ -25,11 +23,15 @@
         different or additional languages, you must specify them in the Preferences like this:
         </p><p>
         <ol>
-            <li>Select the Actions menu and click Preferences item.</li>
-            <li>In the Preferences dialog, in the Languages tab, check (and uncheck) the appropriated languages.</li>
-            <li>Click Ok.</li>
+            <li>Click the <tt>Preferences</tt> item in the application menu.</li>
+            <li>In the Preferences dialog, click the <tt>Study Languages...</tt> button.</li>
+            <li>A list of languages will appear where you can check (or uncheck) languages of interest.  
+            You must choose at least 2 languages, including your mother tongue.  For example, if you're
+            French and want to learn Russian and Chinese, you would check French, Russian, and Chinese languages.</li>
+            <li>Click <tt>Ok</tt> to apply the changes.</li>
             <li>
-            Set the languages selectors properly (the 2 comboboxes at the top of the screen).
+            Set the languages selectors properly.  The language selectors are the two fields on the top-left corner of the
+            Glossary Manager. 
             The first one must contain your mother language (or source language) and 
             the second one must contain the language you want to learn (or target language).
             </li>
@@ -39,15 +41,19 @@
         <p>
         There are some glossaries already available on toMOTko's website in
         the Glossaries section.  If you see something that fits your needs there,
-        download the glossary files into your computer.
+        download the glossary files into your computer.  Do not unzip those files.
+        </p><p>
         To import a glossary into toMOTko, do this:
         </p><p>
         <ol>
-            <li>Select the Actions menu and click Import... item.</li>
+            <li>Click the folder into which you want to import the glossary.
+            The very first time you use toMOTko, you will have only one folder
+            named <tt>My Glossaries</tt>.</li>
+            <li>Click the <tt>Import Data</tt> item in the application menu.</li>
             <li>Locate a downloaded glossary file and select it.</li>
         </ol>
         </p><p>
-        The content of the glossary file should appear inside your root folder.
+        The content of the glossary file should appear inside the selected folder.
         Repeat the procedure for all the downloaded glossaries.
         </p>
         <h2>Create your own glossaries</h2>
@@ -55,23 +61,27 @@
         If none of the available glossaries interest you.  You can create your own glossaries like this:
         </p><p>
         <ol>
-            <li>Click the Red Book button (bottom left) to add a new and empty glossary.</li>
-            <li>To add new words in the glossary, click on it and select the Words tab.</li>
-            <li>Click the White Sheet button (bottom right) to insert a new word.</li>
-            <li>Enter the word's data and click Ok.</li>
+            <li>Click the Red Book button (middle of the left side of the Glossary Manager) to add a new and empty glossary.</li>
+            <li>To add new words in the glossary, click on it and select the Words tab (on the right side).</li>
+            <li>Click the White Sheet button (middle of the right side) to insert a new word.</li>
+            <li>Enter the word's data and click <tt>Ok</tt>.</li>
             <li>Repeat as needed.<li>
         </ol>
         </p>
         <h2>Set up and start a quiz</h2>
         <p>
-        To set up a quiz, you must specify which word the quiz will ask.
+        To set up a quiz, you must specify which words the quiz will ask.
         To do that:
         </p><p>
         <ol>
             <li>Check all the words you want</li>
             <li>Check also the parent glossaries</li>
             <li>Check also the parent folders, if any.</li>
-            <li>To start the quiz, select the Actions menu and click Start Quiz.</li>
+            <li>To start the quiz, click the <tt>Start Quiz</tt> item in the application menu.</li>
+            <li>To gradually reveal information of the word being asked, click the Eye button as many times as needed.</li>
+            <li>To signify a right answer, so that toMOTko stops asking the word, click the Green Circle button.
+            To signify a wrong answer, so that toMOTko keeps asking the word, click the Red X button.
+            By default, a word is repeated at least 2 times.  You can increase or decrease this value in the Preferences.</li>
         </ol>
         </p>
     </body>
