Updated Quiz's Online Help.

--- a/help/en/html/toMOTko-Quiz.html
+++ b/help/en/html/toMOTko-Quiz.html
@@ -10,22 +10,21 @@
         The quiz (shown below) is the main reason for the existence of toMOTko.  It's where the learning of new
         vocabulary takes place.  It's where you will spend most of your time using toMOTko. 
         </p>
-        <p><img src="img/quiz.png" width="525" height="414"/></p>
+        <p><img src="img/quiz.png" width="600" height="360"/></p>
         <p>
-        You can <b>start a Quiz</b> by selecting the item in Actions menu.  You must have chosen
-        prealably some words with the Glossary Manager.  If you had previously started a quiz 
+        You can <b>start a Quiz</b> by selecting the <tt>Start Quiz</tt> item in the application menu.  
+        You must have chosen prealably some words with the Glossary Manager.  If you had previously started a quiz 
         in the currently selected languages, toMOTko will ask you if you want to resume it or not.
         </p><p>
         Once a quiz is started (or resumed), you will be asked the selected words, one after the other.
-        You can reveal word's information gradually either by clicking the Eye button (at the bottom)
-        or the field buttons (labeled with ???).  The Eye button will reveal information gradually 
+        You can reveal word's information gradually either by clicking the Eye button (at the top on right side)
+        or the field buttons (labeled with <tt>???</tt>).  The Eye button will reveal information gradually 
         according to your preferences.  
         </p><p>
-        To <b>signify a right answer</b> to toMOTko 
-        (i.e. that you know the word), you click the Green Circle button (at the bottom).
-        To <b>signify a wrong answer</b> (i.e. that you need that word to be asked again),
-        you click the Red X.  The completion progress of the quiz is displayed at the top 
-        right corner of the quiz window.  Signifying a right answer tells toMOTko that you 
+        To <b>signify a right answer</b> to toMOTko (i.e. that you know the word), you click the Green Circle 
+        button (the second button on the right side).
+        To <b>signify a wrong answer</b>, you click the Red X (the third button on the right side).  
+        Signifying a right answer tells toMOTko that you 
         may not need to be asked that word again.  Signifying a wrong answer tell toMOTko the
         opposite, i.e., that you would like that word to be asked again to memorize it better.
         You can customize this behavior a little bit in the 
@@ -37,31 +36,31 @@
         </p><p>
         There is also a preferences option to hide the quiz buttons to use as much room as possible for
         the data.  In this case, you have to use the keyboard accelerators to control the quiz.  
-        For example, to indicate a right answer, hit Enter key.  See <a href="toMOTko-Preferences.html">Preferences</a> 
+        For example, in such a case, to indicate a right answer, hit Enter key.  See <a href="toMOTko-Preferences.html">Preferences</a> 
         page for details.
         </p><p>
-        You can scroll the fields horizontally using the left and right arrows, and vertically, using 
+        You can scroll the fields horizontally using the left and right arrows (on the keyboard), and vertically, using 
         the up and down arrow for the comments field.
         Using PageUp or PageDown buttons will scroll up or down 1 page at a time.
         </p><p>
         It may come a time when you need to edit the word, either to make a correction or to add
-        a comment or a note.  You can <b>edit the current word</b> clicking the Pencil button (at the bottom).
+        a comment or a note.  You can <b>edit the current word</b> clicking the Pencil button (at the bottom of the right side).
         A dialog will appear where you can edit the word's information.
         </p>
-        <p><img src="img/termEdition.png" width="421" height="336"/></p>
+        <p><img src="img/termEdition.png" width="600" height="360"/></p>
         <p>
-        You can enter your modifications in the text fields.  You can also <b>set an image</b> clicking on the Set button
+        You can enter your modifications in the text fields.  You can also <b>set an image</b> clicking on the <tt>Set</tt> button
         inside the Image section.  Current supported formats include png and gif files (animated or not).  
         Images will be scaled automatically.
         </p><p>
-        Once you're done editing a term, you click the Ok button or the Cancel button (at the top) to, respectively, 
+        Once you're done editing a term, you click the <tt>Ok</tt> button or the <tt>Cancel</tt> button to, respectively, 
         save or cancel the modifications.
         </p><p>
         When the quiz is over, a dialog window will tell you to choose different words in the Glossary
         Manager before starting another quiz.
         </p><p>
         If you want to use the Glossary Manager in the middle of quiz, it's no problem.  When you want to
-        <b>resume a quiz</b>, as mentioned before, selecting Start the quiz, in the Actions menu, will ask 
+        <b>resume a quiz</b>, as mentioned before, selecting <tt>Start the quiz</tt>, in the application menu, will ask 
         you to resume a previously started quiz or start a new one.
         </p>
     </body>
