Improved layout and online help and fixed various small bugs (take 2).

--- a/help/en/html/toMOTko-GlossaryManager.html
+++ b/help/en/html/toMOTko-GlossaryManager.html
@@ -13,6 +13,11 @@
         As shown in the picture below, it is divided in two panels.
         The left panel contains Language Selectors on top and a hierarchical structure (a tree)
         including Folders and Glossaries.  The right panel displays either a folder or glossary's details.
+        </p><p>
+        It's possible to change the size of these panels using the slider bar that separates them.  
+        Also, when a glossary is selected, you can maximize the right panel by double-clicking in the 
+        empty space just right of the tabpanel header.  To minimize it, double-click in the same area will
+        revert it to its previous size.
         </p>
         <p><img src="img/glossaryManager.png" width="600" height="360"/></p>
         <h2>Tree pane</h2>
