--- a/help/en/html/toMOTko-QuickStart.html
+++ b/help/en/html/toMOTko-QuickStart.html
@@ -40,7 +40,7 @@
         <h2>Import existing glossaries</h2>
         <p>
         There are some glossaries already available on toMOTko's website in
-        the Glossaries section.  If you see something that fits your needs there,
+        the <a href="http://tomotko.sourceḟorge.net/en/glossaries.shtml">Glossaries</a> section.  If you see something that fits your needs there,
         download the glossary files into your computer.  Do not unzip those files.
         </p><p>
         To import a glossary into toMOTko, do this:
