Minor rectifications in Online Help.

--- a/help/en/html/toMOTko-Digraphs.html
+++ b/help/en/html/toMOTko-Digraphs.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Digraphs</h1>
-        <p>Here is the exhaustive list of available digraphs in toMOTko :</p>
+        <p>Here is the list of all available digraphs in toMOTko :</p>
         <p>
         <table border="1" cellpadding="4">
             <tr bgcolor="#cccccc"><th>Digraph</th><th>Result</th><th>Digraph</th><th>Result</th></tr>
@@ -34,6 +34,6 @@
             <tr><td>U:</td><td>Ü</td><td>u:</td><td>ü</td></tr>
         </table>
         </p>
-        <p>If you need more digraphs, let me know so that I can add them in a later version.</p>
+        <p>If you need more digraphs, let me know so that I can add them in a future version.</p>
     </body>
 </html>
