--- a/help/en/html/toMOTko-Preferences.html
+++ b/help/en/html/toMOTko-Preferences.html
@@ -7,12 +7,11 @@
     <body>
         <h1>Preferences</h1>
         <p>
-        The Preferences dialog allows you to specify custom attributes of toMOTko.
-        The main window contains general settings.  Other settings may be set by
+        The Preferences dialog allows you to specify custom settings of toMOTko.
+        The main window contains general settings.  More specific settings may be set by
         invoking subwindows.
         </p><p>
-        Let's first take a look at the main window that looks 
-        like this:
+        Let's first take a look at the main window:
         </p>
         <p><img src="img/preferences.png" width="600" height="360"/></p>
         <p>
@@ -41,12 +40,11 @@
         followed by backspace and '~'.
         </p><p>
         At the moment, only a few <a href="toMOTko-Digraphs.html">digraphs</a> are available.  More digraphs will
-        probably be added in later versions.
+        probably be added in future versions.
         </p><p>
         Getting used to digraphs is very easy and convenient for some languages.  However, it's no substitute for a 
-        functional Input Method component that allows the input of not only accentuated characters, but also non-latin 
-        characters as well, like Chinese, Japanese, or Korean characters.  If you prefer using an external Input Method component,
-        feel free to disable this feature.
+        functional Input Method component, especially when dealing with oriental languages like Chinese, Japanese, or Korean characters.
+        If you prefer using an external Input Method component, feel free to disable this feature.
         </p><p>
         You can <b>hide or show the quiz buttons</b> depending if you prefer to have more space allocated
         to display the words' information or not.  If you check the box, as the buttons are hidden, you
