--- a/help/en/html/toMOTko-Quiz.html
+++ b/help/en/html/toMOTko-Quiz.html
@@ -25,7 +25,7 @@
         button (the second button on the right side).
         To <b>signify a wrong answer</b>, you click the Red X (the third button on the right side).  
         Signifying a right answer tells toMOTko that you 
-        may not need to be asked that word again.  Signifying a wrong answer tell toMOTko the
+        may not need to be asked that word again.  Signifying a wrong answer tells toMOTko the
         opposite, i.e., that you would like that word to be asked again to memorize it better.
         You can customize this behavior a little bit in the 
         <a href="toMOTko-Preferences.html">Preferences</a> section.
@@ -36,7 +36,8 @@
         </p><p>
         There is also a preferences option to hide the quiz buttons to use as much room as possible for
         the data.  In this case, you have to use the keyboard accelerators to control the quiz.  
-        For example, in such a case, to indicate a right answer, hit Enter key.  See <a href="toMOTko-Preferences.html">Preferences</a> 
+        By default, to indicate a right answer, hit <tt>Enter</tt> key. For a wrong answer, hit <tt>Backspace</tt>, and
+        to reveal data, hit <tt>Space</tt>.  See <a href="toMOTko-Preferences.html">Preferences</a> 
         page for details.
         </p><p>
         You can scroll the fields horizontally using the left and right arrows (on the keyboard), and vertically, using 
