--- a/help/en/html/toMOTko.html
+++ b/help/en/html/toMOTko.html
@@ -18,7 +18,7 @@
         </ul>
         <p>
         </p><p>
-        Otherwise, for more details, consult the specific section :
+        Otherwise, for more details, consult the specific sections :
         <p>
         <ul>
             <li><a href="toMOTko-GlossaryManager.html">Glossary Manager</a></li>
@@ -27,9 +27,10 @@
             <li><a href="toMOTko-Digraphs.html">Digraphs</a></li>
         </ul>
         <p>
-        If you have any inquiries/suggestions, or to report a bug, 
-        or submit and share your glossaries, 
-        please go to the home page at 
+        You can also find additional information and glossaries on the home page at
         <a href="http://tomotko.sourceforge.net">http://tomotko.sourceforge.net</a>.
+        </p><p>
+        For support, to report a bug, or ask a feature, use the Sourceforge Project page here:
+        <a href="http://sourceforge.net/tracker/?group_id=181531">http://sourceforge.net/tracker/?group_id=181531</a>.
     </body>
 </html>
